# cmakeklist_test

./: CMakeLists.txt
include/: Sum.h
src/: Sum.cpp  main.cpp
